objects/SlickSidebar_Location__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bubble_Text__c</fullName>
        <label>Bubble Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Map_Pin_Graphic_URL__c</fullName>
        <defaultValue>&quot;https://www.google.com/intl/en_us/mapfiles/ms/icons/blue.png&quot;</defaultValue>
        <label>Map Pin Graphic URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>